# bridgy-fed is an application, not a packaged library, so this file is just
# for managing dependencies. Use uv compile to compile the direct dependencies
# here to the complete pinned list in requirements.pinned.txt.

[project]
name = 'bridgy-fed'
version = '1.0'
requires-python = '>=3.12'

[project.optional-dependencies]
app = [
    # our own packages, used at head via the editable local checkouts in
    # [tool.uv.sources]; the deploy-time git refs are in requirements.txt
    'arroba[datastore,flask]',
    'brevity @ git+https://github.com/snarfed/brevity.git@new-tlds',
    'dag-json',
    'granary',
    'httpsig',
    'lexrpc[flask]',
    'mf2util',
    'negotiator',
    'oauth-dropins',
    'pymemcache',
    'pywebutil[google-cloud,html]',
    'secp256k1',

    # third-party
    'cachetools>=5.0.0',
    'cryptography>=41.0.0',
    'domain2idna>=1.12',
    'flask>=3.0.0',
    'google-api-python-client>=2.0',
    'google-cloud-dns>=0.34',
    'google-cloud-error-reporting>=1.16.0',
    'google-cloud-ndb>=2.0',
    'google-cloud-tasks>=2.0',
    'grpcio>=1.59.0',
    'gunicorn>=26.0.0',
    'humanize>=4.0',
    'libipld>=3.0.0',
    'multiformats>=0.3.1',
    'pycryptodome>=3.0',
    'pyjwt>=2.0.0',
    'python-dateutil>=2.8.1',
    'pytz>=2022.1',
    'requests>=2.22',
    'tldextract>=3.0',
    'ujson>=5.7.0',
    'websockets>=11.0',
    'werkzeug>=3.0.0',
]
tests = [
    'mox3 @ git+https://github.com/snarfed/mox3.git',
    'pytest',
    'pytest-xdist',
]
docs = [
    'sphinx>=7.0.0',
    'sphinx-rtd-theme>=3.0.0',
]

[tool.uv]
package = false

# keep these sections in sync with requirements.txt
[tool.uv.sources]
arroba =            { editable = true, path = "../arroba" }
brevity =           { editable = true, path = "../brevity" }
carbox =            { editable = true, path = "../carbox" }
dag-json =          { editable = true, path = "../dag-json" }
flask-gae-static =  { editable = true, path = "../flask-gae-static" }
granary =           { editable = true, path = "../granary" }
httpsig =           { editable = true, path = "../httpsig" }
lexrpc =            { editable = true, path = "../lexrpc" }
mf2util =           { editable = true, path = "../mf2util" }
mox3 =              { editable = true, path = "../mox3" }
negotiator =        { editable = true, path = "../negotiator" }
oauth-dropins =     { editable = true, path = "../oauth-dropins" }
pymemcache =        { editable = true, path = "../pymemcache" }
pywebutil =         { editable = true, path = "../webutil" }
secp256k1 =         { editable = true, path = "../secp256k1-py" }

[tool.uv.pip]
# this is in ~/.config/uv/uv.toml

[tool.deptry]
extend_exclude = ['build', 'dist', 'docs']

[tool.deptry.per_rule_ignores]
# these deps aren't imported directly but we still need them: gunicorn (WSGI
# server), mox3 (tests), ujson
DEP002 = [
    'gunicorn',
    'mox3',
    'pytest',
    'pytest-xdist',
    'sphinx',
    'sphinx-rtd-theme',
    'ujson',
]
